Update DB y Registro
Agregue la tabla Cliente a la DB para poder trabajar estos días, además cree el AccesoCliente y a su vez, la función para registrarse. Los campos se limpian solos una vez clickeado el botón y aparece un mensaje confirmando la acción.

--- a/Datos/Datos.csproj
+++ b/Datos/Datos.csproj
@@ -42,6 +42,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AccesoIncidencias.cs" />
+    <Compile Include="AccesoClientes.cs" />
+    <Compile Include="Clientes.cs" />
     <Compile Include="Incidencias.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
