--- a/Datos/Datos.csproj
+++ b/Datos/Datos.csproj
@@ -43,9 +43,10 @@
   <ItemGroup>
     <Compile Include="AccesoIncidencias.cs" />
     <Compile Include="AccesoClientes.cs" />
-    <Compile Include="Clientes.cs" />
-    <Compile Include="Incidencias.cs" />
+    <Compile Include="Cliente.cs" />
+    <Compile Include="Incidencia.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Usuario.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Dominio\Dominio.csproj">
