--- a/GP05-CallCenter/CallCenter.csproj
+++ b/GP05-CallCenter/CallCenter.csproj
@@ -98,6 +98,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="About.aspx" />
+    <Content Include="Admin.aspx" />
     <Content Include="Contact.aspx" />
     <Content Include="Content\bootstrap-grid.css" />
     <Content Include="Content\bootstrap-grid.min.css" />
@@ -118,6 +119,7 @@
     <Content Include="Content\Site.css" />
     <Content Include="Cuenta.aspx" />
     <Content Include="Default.aspx" />
+    <Content Include="Edicion.aspx" />
     <Content Include="favicon.ico" />
     <Content Include="Formularios.aspx" />
     <Content Include="Global.asax" />
@@ -186,6 +188,13 @@
     <Content Include="Site.Mobile.Master" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Admin.aspx.cs">
+      <DependentUpon>Admin.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Admin.aspx.designer.cs">
+      <DependentUpon>Admin.aspx</DependentUpon>
+    </Compile>
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="About.aspx.cs">
       <DependentUpon>About.aspx</DependentUpon>
@@ -215,6 +224,13 @@
     </Compile>
     <Compile Include="Default.aspx.designer.cs">
       <DependentUpon>Default.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Edicion.aspx.cs">
+      <DependentUpon>Edicion.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Edicion.aspx.designer.cs">
+      <DependentUpon>Edicion.aspx</DependentUpon>
     </Compile>
     <Compile Include="Formularios.aspx.cs">
       <DependentUpon>Formularios.aspx</DependentUpon>
