--- a/GP05-CallCenter/CallCenter.csproj
+++ b/GP05-CallCenter/CallCenter.csproj
@@ -120,11 +120,15 @@
     <Content Include="Cuenta.aspx" />
     <Content Include="Default.aspx" />
     <Content Include="Edicion.aspx" />
+    <Content Include="Error.aspx" />
     <Content Include="favicon.ico" />
     <Content Include="Formularios.aspx" />
     <Content Include="Global.asax" />
     <Content Include="Incidencias.aspx" />
+    <Content Include="Inicio.aspx" />
     <Content Include="LogIn.aspx" />
+    <Content Include="MisDatos.aspx" />
+    <Content Include="MisReclamos.aspx" />
     <Content Include="Registro.aspx" />
     <Content Include="Scripts\bootstrap.bundle.js" />
     <Content Include="Scripts\bootstrap.bundle.min.js" />
@@ -232,6 +236,13 @@
     <Compile Include="Edicion.aspx.designer.cs">
       <DependentUpon>Edicion.aspx</DependentUpon>
     </Compile>
+    <Compile Include="Error.aspx.cs">
+      <DependentUpon>Error.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Error.aspx.designer.cs">
+      <DependentUpon>Error.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Formularios.aspx.cs">
       <DependentUpon>Formularios.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -249,12 +260,33 @@
     <Compile Include="Incidencias.aspx.designer.cs">
       <DependentUpon>Incidencias.aspx</DependentUpon>
     </Compile>
+    <Compile Include="Inicio.aspx.cs">
+      <DependentUpon>Inicio.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Inicio.aspx.designer.cs">
+      <DependentUpon>Inicio.aspx</DependentUpon>
+    </Compile>
     <Compile Include="LogIn.aspx.cs">
       <DependentUpon>LogIn.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
     <Compile Include="LogIn.aspx.designer.cs">
       <DependentUpon>LogIn.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="MisDatos.aspx.cs">
+      <DependentUpon>MisDatos.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="MisDatos.aspx.designer.cs">
+      <DependentUpon>MisDatos.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="MisReclamos.aspx.cs">
+      <DependentUpon>MisReclamos.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="MisReclamos.aspx.designer.cs">
+      <DependentUpon>MisReclamos.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Registro.aspx.cs">
