--- a/Datos/Datos.csproj
+++ b/Datos/Datos.csproj
@@ -41,10 +41,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AccesoEmpleados.cs" />
     <Compile Include="AccesoIncidencias.cs" />
     <Compile Include="AccesoClientes.cs" />
     <Compile Include="AccesoUsuario.cs" />
     <Compile Include="Cliente.cs" />
+    <Compile Include="Empleado.cs" />
     <Compile Include="Incidencia.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Usuario.cs" />
