--- a/Datos/Datos.csproj
+++ b/Datos/Datos.csproj
@@ -45,11 +45,13 @@
     <Compile Include="AccesoEmpleados.cs" />
     <Compile Include="AccesoIncidencias.cs" />
     <Compile Include="AccesoClientes.cs" />
+    <Compile Include="AccesoPrioridades.cs" />
     <Compile Include="AccesoUsuario.cs" />
     <Compile Include="CategoriasCliente.cs" />
     <Compile Include="Cliente.cs" />
     <Compile Include="Empleado.cs" />
     <Compile Include="Incidencia.cs" />
+    <Compile Include="PrioridadesIncidente.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Usuario.cs" />
   </ItemGroup>
