--- a/GP05-CallCenter/CallCenter.csproj
+++ b/GP05-CallCenter/CallCenter.csproj
@@ -119,6 +119,7 @@
     <Content Include="Cuenta.aspx" />
     <Content Include="Default.aspx" />
     <Content Include="Edicion.aspx" />
+    <Content Include="EdicionDatos.aspx" />
     <Content Include="Error.aspx" />
     <Content Include="favicon.ico" />
     <Content Include="Formularios.aspx" />
@@ -234,6 +235,13 @@
     </Compile>
     <Compile Include="Edicion.aspx.designer.cs">
       <DependentUpon>Edicion.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="EdicionDatos.aspx.cs">
+      <DependentUpon>EdicionDatos.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="EdicionDatos.aspx.designer.cs">
+      <DependentUpon>EdicionDatos.aspx</DependentUpon>
     </Compile>
     <Compile Include="Error.aspx.cs">
       <DependentUpon>Error.aspx</DependentUpon>
