Tomar incidencias libres
Se agrego la función para poder tomar incidencias libres como empleado. Todavía no esta terminada, falta hacer que el IDEmpleado que se pasa como parámetro sea en tiempo real (empleado iniciado en el sistema).

--- a/GP05-CallCenter/CallCenter.csproj
+++ b/GP05-CallCenter/CallCenter.csproj
@@ -125,6 +125,7 @@
     <Content Include="Formularios.aspx" />
     <Content Include="Global.asax" />
     <Content Include="Incidencias.aspx" />
+    <Content Include="IncidenciasLibres.aspx" />
     <Content Include="Inicio.aspx" />
     <Content Include="LogIn.aspx" />
     <Content Include="MisDatos.aspx" />
@@ -266,6 +267,13 @@
     </Compile>
     <Compile Include="Incidencias.aspx.designer.cs">
       <DependentUpon>Incidencias.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="IncidenciasLibres.aspx.cs">
+      <DependentUpon>IncidenciasLibres.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="IncidenciasLibres.aspx.designer.cs">
+      <DependentUpon>IncidenciasLibres.aspx</DependentUpon>
     </Compile>
     <Compile Include="Inicio.aspx.cs">
       <DependentUpon>Inicio.aspx</DependentUpon>
