Primera implementación de historial
Se agrego la función de historial de manera inicial, todavía falta que se agreguen distintos items a medida que se avanza con la incidencia.

--- a/GP05-CallCenter/CallCenter.csproj
+++ b/GP05-CallCenter/CallCenter.csproj
@@ -124,6 +124,7 @@
     <Content Include="favicon.ico" />
     <Content Include="Formularios.aspx" />
     <Content Include="Global.asax" />
+    <Content Include="Historial.aspx" />
     <Content Include="Incidencias.aspx" />
     <Content Include="IncidenciasLibres.aspx" />
     <Content Include="Inicio.aspx" />
@@ -260,6 +261,13 @@
     </Compile>
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
+    </Compile>
+    <Compile Include="Historial.aspx.cs">
+      <DependentUpon>Historial.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Historial.aspx.designer.cs">
+      <DependentUpon>Historial.aspx</DependentUpon>
     </Compile>
     <Compile Include="Incidencias.aspx.cs">
       <DependentUpon>Incidencias.aspx</DependentUpon>
