--- a/Datos/Datos.csproj
+++ b/Datos/Datos.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="AccesoCategorias.cs" />
     <Compile Include="AccesoEmpleados.cs" />
+    <Compile Include="AccesoHistorial.cs" />
     <Compile Include="AccesoIncidencias.cs" />
     <Compile Include="AccesoClientes.cs" />
     <Compile Include="AccesoPrioridades.cs" />
@@ -51,6 +52,7 @@
     <Compile Include="CategoriasCliente.cs" />
     <Compile Include="Cliente.cs" />
     <Compile Include="Empleado.cs" />
+    <Compile Include="Historial.cs" />
     <Compile Include="Incidencia.cs" />
     <Compile Include="PrioridadesIncidente.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
