--- a/Datos/Datos.csproj
+++ b/Datos/Datos.csproj
@@ -46,6 +46,7 @@
     <Compile Include="AccesoHistorial.cs" />
     <Compile Include="AccesoIncidencias.cs" />
     <Compile Include="AccesoClientes.cs" />
+    <Compile Include="AccesoPlantillas.cs" />
     <Compile Include="AccesoPrioridades.cs" />
     <Compile Include="AccesoTipos.cs" />
     <Compile Include="AccesoUsuario.cs" />
@@ -54,6 +55,7 @@
     <Compile Include="Empleado.cs" />
     <Compile Include="Historial.cs" />
     <Compile Include="Incidencia.cs" />
+    <Compile Include="Plantilla.cs" />
     <Compile Include="PrioridadesIncidente.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TiposIncidente.cs" />
