--- a/Datos/Datos.csproj
+++ b/Datos/Datos.csproj
@@ -54,10 +54,11 @@
     <Compile Include="Cliente.cs" />
     <Compile Include="Empleado.cs" />
     <Compile Include="Historial.cs" />
-    <Compile Include="Incidencia.cs" />
+    <Compile Include="Incidencias.cs" />
     <Compile Include="Plantilla.cs" />
     <Compile Include="PrioridadesIncidente.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TimerService.cs" />
     <Compile Include="TiposIncidente.cs" />
     <Compile Include="Usuario.cs" />
   </ItemGroup>
